--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 	<meta name="twitter:domain" content="https://twitter.com/_amberdion_" />
 	<meta name="twitter:title" content="Amber Dión Music" />
 	<meta name="twitter:description" content="Amber Dión, emerging songwriter and vocal arranger" />
-	<meta name="twitter:image" content="img/amber/profile.jpg" />
+	<meta name="twitter:image" content="img/amber/cropped.jpg" />
 
 	<!-- Mobile Specific Metas
 	================================================== -->
