--- a/music.html
+++ b/music.html
@@ -14,7 +14,7 @@
 	<meta property="og:title" content="Amber Dión Music" />
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="https://twitter.com/_amberdion_" />
-	<meta property="og:image" content="img/amber/profile.jpg" />
+	<meta property="og:image" content="img/amber/cropped.jpg" />
 	<meta property="og:image:width" content="470" />
 	<meta property="og:image:height" content="246" />
 	<meta property="og:site_name" content="" />
@@ -24,7 +24,7 @@
 	<meta name="twitter:domain" content="https://twitter.com/_amberdion_" />
 	<meta name="twitter:title" content="Amber Dión Music" />
 	<meta name="twitter:description" content="Amber Dión, emerging songwriter and vocal arranger" />
-	<meta name="twitter:image" content="img/amber/profile.jpg" />
+	<meta name="twitter:image" content="img/amber/cropped.jpg" />
 
 	<!-- Mobile Specific Metas
 	================================================== -->
