--- a/about.html
+++ b/about.html
@@ -36,7 +36,8 @@
 
 	<!-- Web Fonts 
 	================================================== -->
-	<link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Lexend+Zetta&family=Lobster&family=Marck+Script&family=Nanum+Gothic&family=Parisienne&family=Permanent+Marker&family=Playfair+Display:ital,wght@1,400;1,900&family=Poiret+One&family=Reem+Kufi&family=Righteous&family=Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext,vietnamese" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
 	
 	<!-- CSS
@@ -106,7 +107,7 @@
 			<div class="container z-bigger">
 				<div class="row page-title px-5 px-xl-2">
 					<div class="col-12 parallax-fade-top">
-						<h1>Amber Dión</h1>
+						<h1 class="blocks">Amber Dión</h1>
 					</div>
 					<div class="offset-1 col-11 parallax-fade-top mt-2 mt-sm-3">
 						<p>Biography</p>
@@ -134,7 +135,7 @@
 						<div class="row mt-5 mt-xl-0 justify-content-center">
 							<div class="offset-xl-5 col-sm-8 col-md-6 col-lg-5 text-center text-xl-right" data-scroll-reveal="enter left move 30px over 0.5s after 0.1s">
 								<h5 class="mb-3"></h5>
-								<p class="mb-3 text-center lead">Amber Dión, an emerging songwriter and vocal arranger describes her musical approach as eclectic and soulful.  Amber uses her passion for classical technique and form and the groove of R&amp;B and Pop music to provide listeners a thought provoking musical experience.  Not just music that is audibly appealing but resonates with the heart of a person.  Her influences range from Kathleen Battle and Audra McDonald to Brandy and Tank.  Amber seeks to inspire creatives and music lovers to go after all that life has for them by living big and creating even bigger.</p>	
+								<p class="mb-3 text-center lead">Amber Dión, an emerging songwriter and vocal arranger describes her musical approach as eclectic and soulful.  Amber combines her passion for classical technique with the groove of R&amp;B and Pop music to provide listeners a thought provoking musical experience.  Not just music that is audibly appealing but resonates with the heart of a person.  Her influences range from Kathleen Battle and Audra McDonald to Brandy and Tank.  Amber seeks to inspire creatives and music lovers to go after all life has for them by living big and creating even bigger.</p>	
 							</div>
 							
 						</div>
@@ -178,7 +179,7 @@
 				<div class="row">
 					<div class="col-12 text-center z-bigger py-5">
 						<div class="footer-lines">
-							<a href="music.html" class="hover-target animsition-link"><h4>Amber Dión Music</h4></a>
+							<a href="music.html" class="hover-target animsition-link"><h4 class="blocks">Amber Dión Music</h4></a>
 						</div>
 					</div>
 				</div>
@@ -194,7 +195,7 @@
             <a href="https://www.youtube.com/channel/UC83BQY7IpdQ-C19GxW6SMOw" class="hover-target" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
             
 			<a href="https://www.instagram.com/_amberdion_/" class="hover-target" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-			<a href="https://www.facebook.com/amber.smith.soulmusic?epa=SEARCH_BOX" class="hover-target" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
+			
 		</div>
 		<div class="copyr">
 			2020 © <a href="" class="hover-target">Amber Dión</a>
