--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<meta name="twitter:image" content="img/amber/profile.jpg" />
 	<!-- Mobile Specific Metas
 	================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width">
 	<meta name="theme-color" content="#212121"/>
     <meta name="msapplication-navbutton-color" content="#212121"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="#212121"/>
