--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 		<!-- Primary Page Layout
 		================================================== -->	
 
-		<div class="shadow-title parallax-top-shadow">Hola</div>
+		<div class="shadow-title parallax-top-shadow">Contact</div>
 		
 		<div class="section padding-page-top padding-bottom over-hide z-bigger">
 			<div class="container z-bigger">
