--- a/gallery.html
+++ b/gallery.html
@@ -121,7 +121,7 @@
 					<div class="col-md-6 img-slice-wrap mb-5 over-hide">
 						<a href="" class="hover-target animsition-link hover-portfolio-box">
 							<div class="scroll-img" style="background-image: url(img/amber/headphones.JPG);"></div>
-							<p>K Camps Photography</p> 
+							<p>K Cams Photography</p> 
                             <h4 class="blocks">Photography</h4>
 						</a>
 					</div>
@@ -129,7 +129,7 @@
 					<div class="offset-md-3 col-md-6 img-slice-wrap mt-5 mb-5 over-hide">
 						<a href="" class="hover-target animsition-link hover-portfolio-box">
 							<div class="scroll-img" style="background-image: url(img/amber/main.JPG);"></div>
-							<p>K Camps Photography</p> 
+							<p>K Cams Photography</p> 
                             <h4 class="blocks">Photography</h4>
 						</a>
 					</div>	
@@ -137,7 +137,7 @@
 					<div class="offset-md-6 col-md-6 img-slice-wrap mt-5 mb-5 over-hide">
 						<a href="project.html" class="hover-target animsition-link hover-portfolio-box">
 							<div class="scroll-img" style="background-image: url(img/amber/read.JPG);"></div>
-							<p>K Camps Photography</p> 
+							<p>K Cams Photography</p> 
                             <h4 class="blocks">Photography</h4>
 						</a>
 					</div>
@@ -145,7 +145,7 @@
 					<div class="offset-md-3 col-md-6 img-slice-wrap mt-5 mb-5 over-hide">
 						<a href="project-1.html" class="hover-target animsition-link hover-portfolio-box">
 							<div class="scroll-img" style="background-image: url(img/amber/danginlove.JPG);"></div>
-							<p>K Camps Photography</p> 
+							<p>K Cams Photography</p> 
                             <h4 class="blocks">Photography</h4>
 						</a>
 					</div>
