--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="keywords"  content="Amber Dión, Amber Smith, music, songwriting, arrangements, performance, r&b, soul, Atlanta, Chicago, creatives, vocals, creative director, teaching, coaching," />
 	<meta property="og:title" content="Amber Dión Music" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://twitter.com/_amberdion_" />
+	<meta property="og:url" content="http://amberdionmusic.com/" />
 	<meta property="og:image" content="img/amber/profile.jpg" />
 	<meta property="og:image:width" content="470" />
 	<meta property="og:image:height" content="246" />
