--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<meta property="og:image:height" content="246" />
 	<meta property="og:site_name" content="" />
 	<meta property="og:description" content="Amber Dión, emerging songwriter and vocal arranger" />
-	<meta name="twitter:card" content="Amber Dión Music" />
+	<!--<meta name="twitter:card" content="Amber Dión Music" />
 	<meta name="twitter:site" content="https://twitter.com/_amberdion_" />
 	<meta name="twitter:domain" content="https://twitter.com/_amberdion_" />
 	<meta name="twitter:title" content="Amber Dión Music" />
 	<meta name="twitter:description" content="Amber Dión, emerging songwriter and vocal arranger" />
-	<meta name="twitter:image" content="img/amber/profile.jpg" />
+	<meta name="twitter:image" content="img/amber/profile.jpg" />->
 	<!-- Mobile Specific Metas
 	================================================== -->
 	<meta name="viewport" content="width=device-width, height=device-height">
