--- a/music.html
+++ b/music.html
@@ -20,11 +20,11 @@
 	<meta property="og:site_name" content="" />
 	<meta property="og:description" content="Amber Dión, emerging songwriter and vocal arranger" />
 	<meta name="twitter:card" content="Amber Dión Music" />
-	<meta name="twitter:site" content="https://twitter.com/_amberdion_" />
+	<!--<meta name="twitter:site" content="https://twitter.com/_amberdion_" />
 	<meta name="twitter:domain" content="https://twitter.com/_amberdion_" />
 	<meta name="twitter:title" content="Amber Dión Music" />
 	<meta name="twitter:description" content="Amber Dión, emerging songwriter and vocal arranger" />
-	<meta name="twitter:image" content="img/amber/profile.jpg" />
+	<meta name="twitter:image" content="img/amber/profile.jpg" /> -->
 
 	<!-- Mobile Specific Metas
 	================================================== -->
