--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Amber Dión Music</title>
+	<title>Amber Dión Music | Home</title>
 	<meta name="description"  content="Amber Dión, an emerging songwriter and vocal arranger describes her musical approach as eclectic and soulful.  Amber uses her passion for classical technique and form and the groove of R&amp;B and Pop music to provide listeners a thought provoking musical experience.  Not just music that is audibly appealing but resonates with the heart of a person.  Her influences range from Kathleen Battle and Audra McDonald to Brandy and Tank.  Amber seeks to inspire creatives and music lovers to go after all that life has for them by living big and creating even bigger." />
 	<meta name="author" content="Daylin Henry">
 	<meta name="keywords"  content="Amber Dión, Amber Smith, music, songwriting, arrangements, performance, r&b, soul, Atlanta, Chicago, creatives, vocals, creative director, teaching, coaching," />
